--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -96,7 +96,7 @@ link:focus {
 /*Контакты хедер*/
 .list-contacts {
   display: flex;
-  justify-content: baseline;
+  justify-content: center;
   padding-left: 0;
   margin-left: auto;
 }
@@ -119,7 +119,7 @@ link:focus {
 }
 .nav-icons {
   margin-right: 10px;
-  stroke: currentColor;
+  fill: currentColor;
 }
 .header {
   border: 1px solid #ececec;
@@ -182,12 +182,12 @@ link:focus {
   padding-top: 94px;
   padding-bottom: 94px;
 }
-.features-type {
+.features-icons {
   display: flex;
   justify-content: space-between;
 }
 .features-icons {
-  display: inline-flex;
+  display: flex;
   align-items: center;
   justify-content: center;
   margin-bottom: var(--card-set-gap);
@@ -213,7 +213,7 @@ link:focus {
   margin-top: var(--card-set-gap);
 }
 .features-title {
-  padding-bottom: 10px;
+  margin-bottom: 10px;
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
@@ -304,19 +304,17 @@ link:focus {
   height: 44px;
   border-radius: 50%;
   background-color: var(--title-color);
+  color: var(--icons-color);
 }
 .social-icons-svg {
   width: 20px;
   height: 20px;
-  fill: var(--main-text-color);
+  fill: currentColor;
 }
 .social-icons-link:hover,
 .social-icons-link:focus {
   background-color: var(--accent-color);
-}
-.social-icons-svg:hover,
-.social-icons-svg:focus {
-  fill: var(--title-color);
+  color: var(--title-color);
 }
 
 /*Постоянные клиенты*/
@@ -337,15 +335,12 @@ link:focus {
   box-sizing: border-box;
   border-radius: 4px;
 }
+.clients-link {
+  fill: var(--icons-color);
+}
 .clients-link:hover,
 clients-link:focus {
   border-color: var(--accent-color);
-}
-.clients-icons-svg {
-  fill: var(--icons-color);
-}
-.clients-icons-svg:hover,
-.clients-icons-svg:focus {
   fill: var(--accent-color);
 }
 .clients-example:not(:last-child) {
