--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -43,12 +43,9 @@ ul {
 .container-header {
   display: flex;
   align-items: center;
-  align-items: center;
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
-  padding-top: 24px;
-  padding-bottom: 25px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -79,15 +76,16 @@ ul {
   padding: 0;
   margin: 0;
 }
-.link-current {
+.link.current {
   color: var(--accent-color);
-  text-decoration: none;
 }
 .link {
-  color: inherit;
-  text-decoration: none;
+  display: block;
+  padding-top: 24px;
+  padding-bottom: 25px;
   font-weight: 500;
 }
+
 .link:hover,
 link:focus {
   color: var(--accent-color);
@@ -103,6 +101,8 @@ link:focus {
 .link-contact {
   display: flex;
   align-items: center;
+  padding-top: 24px;
+  padding-bottom: 25px;
   color: var(--main-text-color);
   text-decoration: none;
   font-weight: 500;
